# GraphicsFinal

./: .gitignore  CMakeLists.txt  README.txt
Week11-Lighting/: CMakeLists.txt
Week11-Lighting/Week11-CodeProvided/: CMakeLists.txt
Week11-Lighting/Week11-CodeProvided/resources/: VertexShader.txt
Week11-Lighting/Week11-CodeProvided/src/: main.cpp
Week11-Lighting/Week11-Handout/: Week 11 Presentation.pptx
Week11-Lighting/Week11-Solution/: CMakeLists.txt
Week11-Lighting/Week11-Solution/resources/: VertexShader.txt
Week11-Lighting/Week11-Solution/src/: main.cpp
Week11-Lighting/Week11-Tutorial/: CMakeLists.txt
Week11-Lighting/Week11-Tutorial-Ambient/: CMakeLists.txt
Week11-Lighting/Week11-Tutorial-Ambient/resources/: VertexShader.txt
Week11-Lighting/Week11-Tutorial-Ambient/src/: main.cpp
Week11-Lighting/Week11-Tutorial-Distant/: CMakeLists.txt
Week11-Lighting/Week11-Tutorial-Distant/resources/: FragShader.txt  VertexShader.txt
Week11-Lighting/Week11-Tutorial-Distant/src/: main.cpp
Week11-Lighting/Week11-Tutorial-Point/: CMakeLists.txt
Week11-Lighting/Week11-Tutorial-Point/resources/: VertexShader.txt
Week11-Lighting/Week11-Tutorial-Point/src/: main.cpp
Week11-Lighting/Week11-Tutorial-Spot/: CMakeLists.txt
Week11-Lighting/Week11-Tutorial-Spot/resources/: VertexShader.txt
Week11-Lighting/Week11-Tutorial-Spot/src/: main.cpp
Week6-Assimp/: CMakeLists.txt
Week6-Assimp/Week6-CodeProvided/: CMakeLists.txt
Week6-Assimp/Week6-CodeProvided/src/: main.cpp
Week6-Assimp/Week6-Handout/: Week 6 Presentation.pptx
Week6-Assimp/Week6-Solution/: CMakeLists.txt
Week6-Assimp/Week6-Solution/src/: main.cpp
