cmake_minimum_required(VERSION 2.8)
project(GraphicsFinal)
add_subdirectory(Week6-Assimp)
add_subdirectory(Week11-Lighting)

set(GLEW_INC "NOTFOUND" CACHE PATH "description")
set(GLEW_LIB "NOTFOUND" CACHE PATH "description")

set(GLUT_INC "NOTFOUND" CACHE PATH "description")
set(GLUT_LIB "NOTFOUND" CACHE PATH "description")

set(OPENGL_INC "NOTFOUND" CACHE PATH "description")
set(OPENGL_LIB "NOTFOUND" CACHE PATH "description")