
include_directories(include)

file(GLOB_RECURSE SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} FOLLOW_SYMLINKS src/*.cpp)
file(GLOB_RECURSE INC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} FOLLOW_SYMLINKS include/*.h)
file(GLOB_RECURSE RESOURCE_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} FOLLOW_SYMLINKS resources/*)

foreach(RF ${RESOURCE_FILES})
	file(COPY ${RF} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
endforeach(RF ${RESOURCE_FILES})

add_executable(Week11-Tutorial ${SRCS} ${INC})
target_link_libraries(Week11-Tutorial ${ASSIMP_LIB})